--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,9 @@ a{
     font-size: 13px;
     margin-top: 19px;
 }
+.mekio a:hover{
+    color:#ffffff;
+}
 .list{
     border-right:2px solid #423d39;
     padding: 0px 9px 0px 8px;
@@ -54,6 +57,9 @@ a{
     float: right;
     margin-right: 62px;
 }
+.righthead a:hover{
+    color:white;
+}
 .we{
     width: 190px;
     height: 18px;
@@ -68,11 +74,13 @@ a{
     background: #424242;
     line-height: 50px;
 }
+.omg:hover{
+    background: white;
+}
 .blg{
     width: 99px;
     height: 18px;
     margin-left: 21px;
-    margin-top: 17px;
     font-size: 15px;
     color: #b0b0b0;
 }
@@ -106,6 +114,9 @@ a{
     color: #333333;
     margin-right: 15px;
 }
+.mingg:hover{
+    color: #ff6700;
+}
 .faker{
     width: 294px;
     height: 48px;
@@ -119,7 +130,6 @@ a{
     margin-left: 116px;
     margin-top: 16px;
     float: left;
-
 }
 .list3{
     color: #b0b0b0;
@@ -147,10 +157,140 @@ a{
     background: #b0b0b0;
     position: absolute;
 }
+.leftblackk{
+    width: 234px;
+    height: 396px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+.leftblackk a:hover{
+    width: 234px;
+    height: 41px;
+    background: #ff6700;
+}
+.gtt a:hover{
+    width: 234px;
+    height: 50px;background: #ff6700;
+}
+.leftblackk li{
+    margin-top: 20px;
+}
+.leftblackk a:hover{
+    color:#ff6700;
+}
+.gt{
+    width: 64px;
+    height: 13px;
+    margin-left: 30px;
+    color: white;
+}
 .textlist{
    margin-left: 26px;
-
 }
+.english{
+    width: 1226px;
+    height: 170px;
+    background: #ffffff;
+    margin: 0 auto;
+    margin-top: 14px;
+}
+
+/*.english4 li{*/
+    /*width: 70px;*/
+    /*height: 78px;*/
+    /*background: #6f6d6d;*/
+    /*float: left;*/
+    /*position: relative;*/
+/*}*/
+/*.english4.tutu{*/
+    /*font-size: 40px;*/
+/*}*/
+
+/*.l1{*/
+    /*height: 70px;*/
+    /*width: 1px;*/
+    /*background: #e53935;*/
+    /*position: absolute;*/
+    /*top: 0px;*/
+    /*right: 0px;*/
+/*}*/
+/*.l2{*/
+    /*width: 65px;*/
+    /*height: 1px;*/
+    /*background: #e53935;*/
+    /*position: absolute;*/
+    /*left: 0px;*/
+    /*bottom: 0px;*/
+/*}*/
+/*.english4 li:nth-child(1),.english4 li:nth-child(2),.english4 li:nth-child(3){*/
+    /*margin-top: 7px;*/
+/*}*/
+/*.english4 li:nth-child(1),.english4 li:nth-child(4){*/
+    /*margin-left: 10px;*/
+/*}*/
+/*.english4 li:nth-child(2),.english4 li:nth-child(5){*/
+    /*margin-left: 7px;*/
+/*}*/
+/*.english4 li:nth-child(3),.english4 li:nth-child(6){*/
+    /*margin-left: 7px;*/
+/*}*/
+/*.englishh{*/
+    /*width: 78px;*/
+    /*height: 85px;*/
+    /*background: blanchedalmond;*/
+    /*float: left;*/
+/*}*/
+.english .english1 ul li{
+    width:76px;
+    height: 83px;
+    background: #5f5750;
+    float: left;
+}
+.english .english1 ul li .t{
+    line-height: 40px;
+    font-size: 30px;
+    margin-left: 20px;
+}
+.tt {
+    display: block;
+    margin-left: 9px;
+}
+.english .english1 ul li i a{
+    color: #423d39;
+}
+.english1{
+    width: 234px;
+    height: 170px;
+    background: #5f5750;
+    float: left;
+}
+.english .english1 ul li:hover{
+    color: white;
+}
+.english2{
+    width: 978px;
+    height:170px;
+    background: #ffffff;
+    margin-left: 14px;
+    float: left;
+}
+.english3{
+    width: 316px;
+    height: 170px;
+    float: left;
+    margin-left: 0px;
+    margin-right: 14px;
+}
+.english5{
+    width: 316px;
+    height: 170px;
+    float: left;
+    margin-right: 0px;
+}
+/*.icon-shouji{*/
+    /*display: block;*/
+    /*font-size:26px;*/
+/*}*/
 .shopping{
     width: 1226px;
     height: 400px;
@@ -423,10 +563,15 @@ a{
     float: left;
 }
 .TAB {
-    width: 280px;
     height: 40px;
-    padding-top: 16px;
+    padding-top: 26px;
     float: right;
+}
+.appliances .applianceshead .TAB a{
+    color:black;
+}
+.TAB a:hover{
+    color: #ff6700;
 }
 .tab{
     width: 63px;
@@ -434,6 +579,9 @@ a{
     font-size: 15px;
     color: #424242;
     margin-right: 30px;
+}
+.tab:hover{
+    color: #ff6700;
 }
 .tab1{
     color: #ff6700;
@@ -489,7 +637,7 @@ a{
     transition: all 0.25s 0s linear;
 }
 .tanchu{
-    width: 100%;
+    width: 234px;
     height: 60px;
     background: #ff6700;
     position: absolute;
@@ -498,7 +646,11 @@ a{
     transition: all 0.25s 0s linear;
     color: #fff;
     font-size: 11px;
-    text-align: center;
+    padding:10px 20px;
+    box-sizing: border-box;
+}
+.tanchu p{
+    text-align: left;
 }
 .tjx1:hover .tanchu{
     bottom:0px;
@@ -981,6 +1133,9 @@ a{
     margin-top: 28px;
     font-size: 12px;
 }
+.video4:hover{
+    color: #ff6700;
+}
 .video5{
     width: 296px;
     height: 25px;
@@ -989,7 +1144,228 @@ a{
     font-size: 11px;
     color: #b0b0b0;
 }
+.button{
+    width: 100%;
+    height: 272px;
+    background: #987598;
+}
+.button1{
+    width: 1266px;
+    height: 79px;
+    background: #ffffff;
+    border-bottom: 1px solid #e0e0e0;
+    overflow: hidden;
+    display: flex;
+}
+.button2{
+    width: 191px;
+    height: 27px;
+    background: #ffffff;
+    margin-left: 51px;
+    margin-top: 25px;
+    border-right: 1px solid #e0e0e0;
+}
+.button2 a{
+    color: #616161;
+}
+.button2 a:hover{
+    color: #ff6700;
+}
+.button3{
+    width: 191px;
+    height: 27px;
+    background: #ffffff;
+    margin-left: 51px;
+    margin-top: 25px;
+}
+.button3 a {
+    color: #616161;
+}
+.button3 a:hover{
+    color: #ff6700;
+}
+.redd{
+    width: 1226px;
+    height: 192px;
+    background: #ffffff;
+    overflow: hidden;
+    position: relative;
 
+}
+.button5{
+    width: 157px;
+    height: 192px;
+    overflow: hidden;
+    float: left;
+}
+.button6{
+    width: 62px;
+    height: 26px;
+    font-size: 12px;
+    margin-top: 42px;
+    color: #424242;
+}
+.button7{
+    width: 51px;
+    height: 16px;
+    margin-top: 32px;
+    font-size: 11px;
+    color: #757575;
+}
+.button7:hover{
+    color: #ff6700;
+}
+.button8{
+    width: 60px;
+    height: 16px;
+    margin-top: 10px;
+    font-size: 11px;
+    color: #757575;
+}
+.button8:hover{
+    color: #ff6700;
+}
+.button9{
+    width: 1px;
+    height: 112px;
+    background: #e0e0e0;
+    margin-left: 901px;
+    margin-top: 44px;
+}
+.buttonn{
+    width: 245px;
+    height: 192px;
+    background:#ffffff;
+    position: absolute;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+}
+.buttonn1{
+    width: 156px;
+    height: 24px;
+    margin-left: 53px;
+    margin-top: 40px;
+    font-size: 16px;
+    color: #ff6700;
+    text-align: center;
+}
+.buttonn2{
+    width: 156px;
+    height: 24px;
+    margin-left: 53px;
+    margin-top: 10px;
+    font-size: 11px;
+    color: #757575;
+    text-align: center;
+}
+.buttonn3{
+    width: 156px;
+    height: 24px;
+    margin-left: 53px;
+    margin-top: 10px;
+    font-size: 11px;
+    color: #757575;
+    text-align: center;
+}
+.buttonn4{
+    width: 118px;
+    border: 1px solid #ff6700;
+    margin-left: 66px;
+    text-align: center;
+    font-size: 11px;
+    margin-top: 8px;
+    overflow: hidden;
+    position: relative;
+}
+.buttonn4:hover{
+    background: #ff6700;
+}
+.tanchu1{
+    waidth: 118px;
+    height: 28px;
+    background: #ff6700;
+    position: absolute;
+    left:0;
+    bottom:-28px;
+    transition: all 0.25s 0s linear;
+}
+.sos{
+    width: 100%;
+    height: 146px;
+    background: #fafafa;
+    padding-top:30px;
+}
+.sos1{
+    width: 1226px;
+    height: 57px;
+    margin:0 auto;
+    position:relative;
+    display:flex;
+    justify-content: space-between;
+}
+.sos1 img{
+    display:block;
+    width: 56px;
+    height: 57px;
+}
+.sos2{
+    width: 698px;
+    height: 18px;
+    position:absolute;
+    left:66px;
+    top:0px;
+}
+.sos2 a{
+    font-size: 11px;
+    color:#757575;
+}
+.sos3{
+    position:absolute;
+    top:24px;
+    left:66px;
+    font-size: 11px;
+    color:#b0b0b0;
+}
+.sos4{
+    width: 436px;
+    height: 28px;
+    float:right;
+    line-height: 57px;
+    display:flex;
+}
+.sos4 img{
+    display:block;
+    width:84px;
+    height: 28px;
+}
+.sos5{
+    width: 280px;
+    height: 19px;
+    margin:40px auto 0px;
+    font-family: "楷体";
+    font-size: 20px;
+    color:#bababa;
+}
+.gps{
+    width: 50px;
+    height: 120px;
+    background: #fff;
+    position: fixed;
+    right: 0px;
+    top: 300px;
+    bottom: 300px;
+    z-index: 999;
+    font-size: 20px;
+}
+.gps1{
+    width: 50px;
+    height: 40px;
+    background: #fff;
+}
+.gps1 .tubaio{
+    font-size: 20px;
+}
 
 
 
